[gd_scene load_steps=5 format=2]

[ext_resource path="res://other/DefaultTheme.tres" type="Theme" id=1]
[ext_resource path="res://objects/title/Changes.gd" type="Script" id=2]
[ext_resource path="res://fonts/BoldVerdanaSmall.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/FontVerdanaSmaller.tres" type="DynamicFont" id=4]

[node name="Changes" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -32.0

[node name="Text" type="RichTextLabel" parent="Margin"]
margin_right = 364.0
margin_bottom = 174.0
theme = ExtResource( 1 )
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 4 )
custom_constants/line_separation = 7
bbcode_enabled = true
bbcode_text = "bruh"
text = "bruh"
__meta__ = {
"_editor_description_": "f"
}

[node name="Close" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -43.0
margin_top = -30.0
margin_right = -10.0
margin_bottom = -10.0
theme = ExtResource( 1 )
text = "Back"

[node name="Tween" type="Tween" parent="."]
[connection signal="visibility_changed" from="." to="." method="_on_Changes_visibility_changed"]
[connection signal="button_up" from="Close" to="." method="_on_Close_button_up"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
